--- a/ss_fishes.html
+++ b/ss_fishes.html
@@ -10,7 +10,7 @@
       <title>Professional Business or Visiting card for Individuals or Company</title>
       <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://connect.facebook.net/signals/config/938378916614518?v=2.9.18&amp;r=stable" async=""></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
       <link href="assets/css/profile_style.css" rel="stylesheet">
@@ -46,7 +46,10 @@
                      <div class="card no_margin">
                         <!--<img class="card-img-top" src="assets/images/background/profile-bg.jpg" alt="Card image cap">-->
                         <div class="top_background little-profile text-center" style="background-image: url('assets/customer/images/ss_fishes/image_fg.jpg');">
-                           <div class="pro-img"><img src="assets/customer/images/ss_fishes/logo_2.png" alt="user"></div>
+                           <div class="pro-img"><img src="assets/customer/images/ss_fishes/logo_1.png" alt="user" style="
+    width: 110px;
+    height: 110px;
+"></div>
                         </div>
                         <div class="card-block little-profile text-center" style="padding-left: 15px;padding-right: 15px;    padding-top: 15px; background-image: url('assets/customer/images/ss_fishes/image_fg.jpg') ">
                            <h3 class="m-b-0 name_style" style="color: indigo;background-color: white;">Khalid Ali</h3>
@@ -160,12 +163,12 @@
 							  </div>
 							   <div class="row center_align">
                               <section style="padding: 0px;" id="gallery" class="gallery">
-           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+           <div id="carouselExampleControls" class="carousel slide pointer-event" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item">
       <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/ss_fishes_11.jpg" alt="First slide">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item active">
       <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/ss_fishes_12.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
@@ -210,12 +213,12 @@
 							  </div>
 							   <div class="row center_align">
                               <section style="padding: 0px;" id="gallery" class="gallery">
-           <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+           <div id="carouselExampleControls1" class="carousel slide pointer-event" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item">
       <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/fish_tanks/fish_tank_1.jpeg" alt="First slide">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item active">
       <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/fish_tanks/fish_tank_2.jpeg" alt="Second slide">
     </div>
     <div class="carousel-item">
