--- a/balajicivil.html
+++ b/balajicivil.html
@@ -11,7 +11,9 @@
      <!-- <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">-->
       <title>Professional Business or Visiting card for Individuals or Company</title>
       <!-- Bootstrap Core CSS -->
-      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" >
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
       <link href="assets/css/profile_style.css" rel="stylesheet">
       <!-- You can change the theme colors from here -->
@@ -193,6 +195,40 @@
                                  </a>
                               </div>
                            </div>
+						   <div class="row heading_style">
+                              <h3 class="heading_font"><a href="">Fish Tanks : </a></h3>
+                           </div>
+                           <div class="row center_align">
+                              <section style="padding: 0px;" id="gallery" class="gallery">
+                                 <div id="carouselExampleControls1" class="carousel slide pointer-event" data-ride="carousel">
+                                    <div class="carousel-inner">
+                                       <div class="carousel-item">
+                                          <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/fish_tanks/fish_tank_1.jpeg" alt="First slide">
+                                       </div>
+                                       <div class="carousel-item active">
+                                          <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/fish_tanks/fish_tank_2.jpeg" alt="Second slide">
+                                       </div>
+                                       <div class="carousel-item">
+                                          <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/fish_tanks/fish_tank_3.jpeg" alt="Third slide">
+                                       </div>
+                                       <div class="carousel-item">
+                                          <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/fish_tanks/fish_tank_4.jpeg" alt="Third slide">
+                                       </div>
+                                       <div class="carousel-item">
+                                          <img style="height: 200px; margin-bottom: 10px;" class="d-block w-100" src="assets/customer/images/ss_fishes/fish_tanks/fish_tank_5.jpeg" alt="Third slide">
+                                       </div>
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                    </a>
+                                 </div>
+                              </section>
+                           </div>
 						    <div class="row heading_style center_align">
 							  <h3 class ="footer_font" style><a href="https://api.whatsapp.com/send?phone=+918531990331">Powered By : Elavarasan - 8531990331</a></h3>
 							  </div>
@@ -204,7 +240,7 @@
 			
          </div>
       </div>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+     
 	 <script>
 $(document).ready(function(){
      $(document).bind("contextmenu",function(e){
